syntax = "proto3";

option java_multiple_files = true;
option java_package = "question";
option java_outer_classname = "QuestionProto";

service Question {
  rpc CallQuestion (QuestionRequest) returns (QuestionReply) {}
  rpc SaveQuestion (SaveQuestionRequest) returns (SaveQuestionReply) {}
}

message QuestionRequest {
  string name = 1;
}

message QuestionReply {
  string message = 1;
}

message SaveQuestionRequest {
  string message = 1;
  string date = 2;
}

message SaveQuestionReply {
  string message = 1;
}